<resources>
    <string name="app_name">همراه آبفا استان اصفهان</string>
    <string name="navigation_drawer_open">باز کردن منو</string>
    <string name="navigation_drawer_close">بستن منو</string>
    <string name="sale">فروش انشعاب</string>
    <string name="last_bill_1">مشاهده قبض و پرداخت</string>
    <string name="last_bill_2">پرداخت قبض</string>
    <string name="cardex">صورتحساب</string>
    <string name="cardex_ab">صورت حساب آب بها</string>
    <string name="chart1">مشاهده نمودار مصرف</string>
    <string name="chart2">نمودار مصرف</string>
    <string name="tracking">پیگیری درخواستها</string>
    <string name="mamoor_1">اعلام کارکرد کنتور و قبض میاندوره</string>
    <string name="mamoor_2">اعلام کارکرد کنتور</string>
    <string name="train">آموزش</string>
    <string name="help">راهنما</string>
    <string name="support">خدمات پس ازفروش</string>
    <string name="suggest">انتقاد و پیشنهاد</string>
    <string name="home">خانه</string>
    <string name="portal_connect">اتصال به پرتال</string>
    <string name="session">دستگاه های فعال</string>
    <string name="update">به روزرسانی</string>
    <string name="account">ثبت انشعاب اول</string>
    <string name="change_account_">تغییر یا افزودن انشعاب</string>
    <string name="change_account">تغییر حساب</string>
    <string name="logout">خروج از انشعاب</string>
    <string name="login">ثبت انشعاب</string>
    <string name="add_account">افزودن انشعاب</string>
    <string name="recovery_code">درخواست های قبلی</string>
    <string name="connect_abfa">ارتباط با آبفا</string>
    <string name="connect_developer">ارتباط با پشتیبان</string>
    <string name="exit">خروج از برنامه</string>
    <string name="gps_setting">تنظیمات جی پی اس</string>
    <string name="setting">تنظیمات</string>
    <string name="allow_permission">اعطای دسترسی</string>
    <string name="permission_not_completed">مجوزها کامل نیست، پس از اعطای دسترسی کامل، مجددا تلاش کنید.</string>
    <string name="active_gps">مکان یابی شما غیر فعال است، با مراجعه به تنظیمات، آن را فعال کنید.</string>
    <string name="confirm_permission">جهت استفاده از برنامه مجوزهای پیشنهادی را قبول فرمایید</string>
    <string name="if_reject_permission">در صورت رد این مجوز قادر به استفاده از این دستگاه نخواهید بود\nلطفا با فشار دادن دکمه اعطای دسترسی و سپس در بخش دسترسی ها با این مجوز ها موافقت نمایید</string>
    <string name="access_granted">مجوز ها داده شده</string>
    <string name="google_is_not_available">سرویس های گوگل برای شما در دسترس نیست.</string>
    <string name="google_is_available_but_not_installed">سرویس های گوگل در دسترس است، گوگل پلی نصب را نصب کنید.</string>
    <string name="services_is_not_available">سرویس در دسترس  نیست</string>
    <string name="date">تاریخ</string>
    <string name="use">مصرف</string>
    <string name="use_litr">مصرف به لیتر</string>
    <string name="use_m_3">مصرف به متر مکعب</string>
    <string name="use_average">متوسط مصرف</string>
    <string name="use_date">مدت مصرف</string>
    <string name="cost">مبلغ</string>
    <string name="note">شرح</string>
    <string name="pay_Date">مهلت پرداخت</string>
    <string name="base_info">اطلاعات انشعاب</string>
    <string name="file_number">ردیف</string>
    <string name="dear_user">مشترک گرامی!</string>
    <string name="dear_user_">مشترک گرامی</string>
    <string name="account_">اشتراک</string>
    <string name="id_bill">شناسه قبض</string>
    <string name="id_bill_neighbour">شناسه همسایه</string>
    <string name="user">کاربری</string>
    <string name="formal_capacity">ظرفیت قراردادی</string>
    <string name="ahad">آحاد</string>
    <string name="branch_radius">قطر انشعاب</string>
    <string name="siphon_radius">قطر سیفون</string>
    <string name="current_reading_date">تاریخ قرائت فعلی</string>
    <string name="last_read_date"> تاریخ قرائت پیشین</string>
    <string name="pre_debt_or_owe">بدهی بستانکاری</string>
    <string name="taxfif">تخفیف</string>
    <string name="total">جمع کل</string>
    <string name="debt">بدهی آب بها</string>
    <string name="title_activity_learning">آموزش</string>
    <string name="copy_right_2">شبکه تارنما سپاهان</string>
    <string name="you_are_signed"> شماره اشتراک شما در سامانه ثبت گردید</string>
    <string name="accepted">ادامه</string>
    <string name="back_home">بازگشت به خانه</string>
    <string name="logout_successful">از حساب کاربری خود خارج شدید.</string>
    <string name="change_successful">تغییر حساب کاربری با موفقیت انجام شد.</string>
    <string name="error">خطا</string>
    <string name="all_field_should_filled">همه فیلدها باید پر شود.</string>
    <string name="error_empty">این فیلد باید به درستی پر شود.</string>
    <string name="error_bill_id">شناسه قبض صحیح نمیباشد.</string>
    <string name="error_connection">خطا در جابجایی اطلاعات، لطفا مجدد تلاش کنید.</string>
    <string name="error_unknown">خطای ناشناخته رخ داده است.</string>
    <string name="error_code">\nکد خطا:</string>
    <string name="error_other">در حال حاضر خدمات مقدور نمیباشد، لطفا مجددا تلاش فرمایید.</string>
    <string name="error_internal">با عرض پوزش، سرور در حال به روزرسانی، لطفا دقایقی دیگر امتحان فرمایید.</string>
    <string name="error_input">ورودی های خود را چک کنید.</string>
    <string name="error_change_server">سرور در حال تغییرات است، لطفا منتظر بمانید و در صورت برطرف نشدن مشکل با پشتیبان تماس حاصل فرمایید.</string>
    <string name="error_user_password">نام کاربری و گذرواژه در سیستم موجود نیست، لطفا در ورود اطلاعات دقت قرمایید.</string>
    <string name="error_not_update">لطفا نسخه به روز شده اپلیکیشن را از فهرست فوری، بخش به روز رسانی دریافت نمایید.</string>
    <string name="error_not_update2">همکار گرامی لطفا چهت دریافت آخرین نسخه اپلیکیشن با راهبر تماس حاصل فرمایید.</string>
    <string name="error_not_auth">مجوز های شما باطل شده است، از برنامه خارج و مجددا وارد شوید.</string>
    <string name="error_preparing">مشکلی در فرآیند آماده سازی روی داده است</string>
    <string name="error_android_version">نسخه اندروید شما این ویژگی را پشتیبانی نمی کند</string>
    <string name="time_out_error">پاسخی دریافت نشد</string>
    <string name="server_error">سرور در حال تغییرات است، لطفا منتظر بمانید</string>
    <string name="dialog_canceled">پرداخت لغو شد</string>
    <string name="device_root">دستگاه شما روت شده است</string>
    <string name="water_resource">منابع آب منطقه</string>
    <string name="using_method">روش های صحیح مصرف</string>
    <string name="method_control">روش های کنترل نشتی</string>
    <string name="reduce_component">تجهیزات کاهنده</string>
    <string name="sign">ثبت</string>
    <string name="message">message</string>
    <string name="pay_id">شناسه پرداخت</string>
    <string name="pre_number">شماره قبلی قرائت</string>
    <string name="now_number">شماره فعلی قرائت</string>
    <string name="ab_baha">آب بها</string>
    <string name="karmozd_dafe_fazelab">کارمزد دفع فاضلاب</string>
    <string name="takalife_boodje">تکالیف بودجه</string>
    <string name="lavazeme_kahande">لوازم کاهنده</string>
    <string name="maliat">مالیات و عوارض</string>
    <string name="other_">سایر</string>
    <string name="pay_cost">مبلغ قابل پرداخت</string>
    <string name="phone_number">تلفن ثابت</string>
    <string name="mobile_number">تلفن همراه</string>
    <string name="address">نشانی</string>
    <string name="buy">درخواست خرید</string>
    <string name="postal_code">کدپستی</string>
    <string name="name">نام</string>
    <string name="nation_number">کد ملی</string>
    <string name="family">نام خانوادگی</string>
    <string name="father_name">نام پدر</string>
    <string name="service">لطفا یکی از خدمات زیر را انتخاب کنید</string>
    <string name="water_branch">انشعاب آب</string>
    <string name="water_and_fa_branch">انشعاب آب و فاضلاب</string>
    <string name="submit">ثبت</string>
    <string name="select">لطفا حداقل یکی از خدمات را انتخاب فرمایید</string>
    <string name="error_report">گزارش خطا</string>
    <string name="request">پیگیری درخواست</string>
    <string name="track_number_1">شماره پیگیری:</string>
    <string name="track_number_2">شماره پیگیری</string>
    <string name="status">وضعیت:</string>
    <string name="time">ساعت:</string>
    <string name="date_1">تاریخ:</string>
    <string name="payed_2">قبض پرداخت شده</string>
    <string name="tabsare2">تبصره 2</string>
    <string name="tabsare3Ab">تبصره 3 آب</string>
    <string name="tabsare3Fazelab">تبصره 3 فاضلاب</string>
    <string name="abonmanAb">آبونمان آب</string>
    <string name="abonmanFazelab">آبونمان فاضلاب</string>
    <string name="fasleGarm">فصل گرم</string>
    <string name="mazadOlgoo">مازاد الگو</string>
    <string name="send_feedback">ارسال بازخورد</string>
    <string name="enter">توضیحات را وارد کنید…</string>
    <string name="sms_level">فهرست پیامک های ارسالی در مرحله</string>
    <string name="programmer_team">تیم توسعه دهنده شبکه تارنما سپاهان</string>
    <string name="search">جستجو</string>
    <string name="title">عنوان:</string>
    <string name="request_date_ask">تاریخ درخواست:</string>
    <string name="request_date_request">تاریخ ثبت درخواست:</string>
    <string name="copy_in_clipboard">شماره پیگیری در کلیپ بورد ذخیره شد</string>
    <string name="mobile_model">مدل گوشی:</string>
    <string name="os_version">نسخه اندروید:</string>
    <string name="version">نسخه </string>
    <string name="login_date">تاریخ ورود:</string>
    <string name="rial">ریال</string>
    <string name="pay_type_title">نحوه پرداخت</string>
    <string name="pay_date">تاریخ پرداخت</string>
    <string name="bank_title">نام بانک</string>
    <string name="confirm">تایید</string>
    <string name="cancel">ردکردن</string>
    <string name="canceled">عملیات متوقف شد.</string>
    <string name="Why_We_Ask_For_This_Information">چرا به این اطلاعات نیاز است؟</string>
    <string name="enter_counter_number">لطفا شماره کنتور را وارد نمایید.</string>
    <string name="enter_counter_number_method">\nدر صورتیکه شماره کنتور کمتر از 5 رقم است، از سمت چپ صفر وارد نمایید.</string>
    <string name="dont_show_again">دیگر نمایش نده!</string>
    <string name="_09">09</string>
    <string name="no_sms">در این مرحله پیامکی دریافت نکرده اید.</string>
    <string name="ali_rostami33_gmail_com">ali.rostami33@gmail.com</string>
    <string name="ali_rostami">علی رستمی</string>
    <string name="infoshamsaii_gmail_com">infoshamsaii@gmail.com</string>
    <string name="sepehr_shamsaei">سپهر شمسایی</string>
    <string name="abfa_site">https://www.abfaesfahan.ir</string>
    <string name="mellat_site">https://bill.bpm.bankmellat.ir/bpgwchannel/</string>
    <string name="payment_site">https://crm.abfaesfahan.ir/%s/Bill</string>
    <string name="waiting">لطفا صبر کنید…</string>
    <string name="turn_internet_on">اینترنت وصل نیست، اینترنت وایفای یا همراه خود را روشن کنید.</string>
    <string name="active_user_1">اشتراک های شما</string>
    <string name="active_user_2">اشتراک فعال شما</string>
    <string name="active_user_3">اشتراک فعال:\n</string>
    <string name="get_last_bill_file">دریافت آخرین قبض</string>
    <string name="share">هم رسانی</string>
    <string name="no_access">دسترسی به حافظه لغو شده است.</string>
    <string name="send_to">ارسال به</string>
    <string name="save">ذخیره</string>
    <string name="saved">ذخیره سازی با موفقیت انجام شد</string>
    <string name="number_zero">0</string>
    <string name="setad_phone">تلفن ستاد:</string>
    <string name="setad_phone_number">031–36680030</string>
    <string name="fax">نمابر:</string>
    <string name="fax_namber">031–36689586</string>
    <string name="abfa_email_address">info@abfaisfahan.ir</string>
    <string name="email">ایمیل:</string>
    <string name="user_service">تلفن خدمات مشترکین:</string>
    <string name="pay">پرداخت</string>
    <string name="bill_id">شناسه قبض</string>
    <string name="alias">عنوان (اختیاری)</string>
    <string name="error_section">در چه بخشی خطا وجود دارد؟</string>
    <string name="select_suggest">در صورتی که انتقاد یا پیشنهادی دارید، یک گزینه را انتخاب کنید.</string>
</resources>