<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayoutItem"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/border_gray_4"
    android:layoutDirection="rtl"
    android:orientation="horizontal"
    android:scrollbars="horizontal"
    tools:ignore="UnusedAttribute">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:scrollbars="horizontal"
        tools:ignore="UselessParent">

        <TextView
            android:id="@+id/textViewDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_mid_margin"
            android:layout_marginEnd="@dimen/activity_mid_margin"
            android:layout_marginBottom="@dimen/activity_mid_margin"
            android:layout_weight="1"
            android:maxLines="1"
            android:text="@string/date"
            android:textColor="@color/blue2"
            tools:ignore="NestedWeights,RtlCompat" />

        <TextView
            android:id="@+id/textViewUseM3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_mid_margin"
            android:layout_marginEnd="@dimen/activity_mid_margin"
            android:layout_marginBottom="@dimen/activity_mid_margin"
            android:layout_weight="1"
            android:maxLines="1"
            android:text="@string/use"
            android:textColor="@color/orange2"
            tools:ignore="RtlCompat" />

        <TextView
            android:id="@+id/textViewCost"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_mid_margin"
            android:layout_marginEnd="@dimen/activity_mid_margin"
            android:layout_marginBottom="@dimen/activity_mid_margin"
            android:layout_weight="1"
            android:maxLines="1"
            android:text="@string/cost"
            android:textColor="@color/green2"
            tools:ignore="RtlCompat" />

        <TextView
            android:id="@+id/textViewNote"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_mid_margin"
            android:layout_marginEnd="@dimen/activity_mid_margin"
            android:layout_marginBottom="@dimen/activity_mid_margin"
            android:layout_weight="1"
            android:maxLines="1"
            android:text="@string/note"
            android:textColor="@color/pink2"
            tools:ignore="RtlCompat" />

    </LinearLayout>

    <ImageView
        android:id="@+id/imageViewInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:src="@drawable/cash_payment2"
        tools:ignore="ContentDescription" />
</LinearLayout>