<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layoutDirection="rtl"
    android:orientation="horizontal"
    android:padding="@dimen/activity_mid_padding"
    tools:ignore="UnusedAttribute">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/border_white"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="@dimen/activity_mid_padding"
        tools:ignore="UselessParent">

        <LinearLayout
            android:id="@+id/linearLayoutChange"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textViewName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/alias"
                android:textColor="@color/text_color_1"
                android:textSize="@dimen/textSizeSmall" />

            <TextView
                android:id="@+id/textViewAlias"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/name"
                android:textColor="@color/text_color_1"
                android:textSize="@dimen/textSizeSmall" />

            <TextView
                android:id="@+id/textViewBillId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/bill_id"
                android:textColor="@color/text_color_1"
                android:textSize="@dimen/textSizeSmall" />
        </LinearLayout>

        <ImageView
            android:id="@+id/imageViewDelete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/delete_desable"
            tools:ignore="ContentDescription" />
    </LinearLayout>
</LinearLayout>