<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.LastBillFileActivity">

    <include layout="@layout/footer" />

    <include layout="@layout/header" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/linearLayoutFooter"
        android:layout_below="@id/linearLayoutHeader"
        android:layout_margin="@dimen/activity_mid_margin"
        android:orientation="vertical">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@drawable/border_blue"
            android:scrollbarAlwaysDrawVerticalTrack="true">

            <ImageView
                android:id="@+id/imageViewLastBill"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:scaleType="centerCrop"
                android:scrollbars="vertical"
                tools:ignore="ContentDescription" />
        </ScrollView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="3">

            <Button
                android:id="@+id/buttonShare"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/activity_mid_margin"
                android:layout_weight="1"
                android:background="@drawable/border_blue_1"
                android:text="@string/share"
                android:textColor="@color/white"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/buttonSave"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/activity_mid_margin"
                android:layout_weight="1"
                android:background="@drawable/border_blue_3"
                android:text="@string/save"
                android:textColor="@color/blue2"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/buttonPay"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/activity_mid_margin"
                android:layout_weight="1"
                android:background="@drawable/border_blue_1"
                android:text="@string/pay"
                android:textColor="@color/white"
                tools:ignore="ButtonStyle" />

        </LinearLayout>
    </LinearLayout>
</RelativeLayout>